fix z-index of campaigns so that it's below the chat; fix media query treshold height to always have the complete chat visible

--- a/src/stylesheets/gorgias-campaigns.less
+++ b/src/stylesheets/gorgias-campaigns.less
@@ -6,7 +6,7 @@
 
   font-size: 15px;
   color: @sk-darker-grey;
-  z-index: 999999999 !important;
+  z-index: 999999998 !important;  // one less than the global container, so that it's always below it
 
   .widget-size();
 
