--- a/src/stylesheets/variables.less
+++ b/src/stylesheets/variables.less
@@ -78,7 +78,7 @@
 @screen-sm-ht-min: 508px;
 
 @screen-md-ht-max: 854px;
-@screen-sm-ht-max: 667px;
+@screen-sm-ht-max: 715px;
 @screen-xs-ht-max: 507px;
 
 @header-default-text-color: #333;
